--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="images/TLogoOrange.png">
+    <link rel="icon" href="Images/TLogoOrange.png">
 	
 
     <title>TechySite / Home</title>
@@ -102,17 +102,17 @@
   <div class="card-body">
       <h3>Contact</h3>
       <hr>
-  <a target="_blank" href="http://steamcommunity.com/id/TechyBlock/"><h3><img src="images/Steam.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Steam</h3></a>
+  <a target="_blank" href="http://steamcommunity.com/id/TechyBlock/"><h3><img src="Images/Steam.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Steam</h3></a>
   <br>
-  <a target="_blank" href="https://www.youtube.com/channel/UCNm3Jcz6qsUIKqoRNpvdrKA"><h3><img src="images/YouTube.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> YouTube</h3></a>
+  <a target="_blank" href="https://www.youtube.com/channel/UCNm3Jcz6qsUIKqoRNpvdrKA"><h3><img src="Images/YouTube.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> YouTube</h3></a>
   <br>
-  <a target="_blank" href="https://twitter.com/TechyBlockRBLX"><h3><img src="images/Twitter.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Twitter</h3></a>
+  <a target="_blank" href="https://twitter.com/TechyBlockRBLX"><h3><img src="Images/Twitter.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Twitter</h3></a>
   <br>
-  <a target="_blank" href="mailto:focusedplayerstudio@gmail.com?subject=	techy.zonet.us"><h3><img src="images/email.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Email</h3></a>
+  <a target="_blank" href="mailto:focusedplayerstudio@gmail.com?subject=	techy.zonet.us"><h3><img src="Images/email.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Email</h3></a>
   <br>
-  <a target="_blank" href="https://www.roblox.com/users/33903481/profile"><h3><img src="images/roblox.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Roblox</h3><a/>
+  <a target="_blank" href="https://www.roblox.com/users/33903481/profile"><h3><img src="Images/roblox.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Roblox</h3><a/>
     <br>
-    <img src="images/switch.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> SW-6632-2074-3431</p>
+    <img src="Images/switch.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> SW-6632-2074-3431</p>
 
 </div>
 </div>
