--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <hr>
   <a target="_blank" href="http://steamcommunity.com/id/TechyBlock/"><h3><img src="Images/Steam.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Steam</h3></a>
   <br>
-  <a target="_blank" href="https://www.youtube.com/channel/UCNm3Jcz6qsUIKqoRNpvdrKA"><h3><img src="Images/YouTube.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> YouTube</h3></a>
+  <a target="_blank" href="https://www.youtube.com/channel/UCNm3Jcz6qsUIKqoRNpvdrKA"><h3><img src="Images/Youtube.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> YouTube</h3></a>
   <br>
   <a target="_blank" href="https://twitter.com/TechyBlockRBLX"><h3><img src="Images/Twitter.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Twitter</h3></a>
   <br>
