--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <br>
   <a target="_blank" href="https://www.roblox.com/users/33903481/profile"><h3><img src="Images/roblox.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Roblox</h3><a/>
     <br>
-    <img src="Images/switch.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> SW-6632-2074-3431</p>
+    <img src="Images/Switch.png" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> SW-6632-2074-3431</p>
 
 </div>
 </div>
