--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 <div class="card border-light mb-3" style="width: 20rem;float:left;">
 	<div class="card-body">
 	<p class="card-text">
-    <img src="" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"><span class="badge badge-secondary">HELP!</span> The final countdown has begun! <hr> This is the last battle, They plan to kill off net neutrality on <b>April 23th.</b> <b>Visit https://www.battleforthenet.com/</b> to find out what can you do to help..</p>
+    <img src="" class="img-inline" style="max-width: 30px; max-height: 30px; vertical-align: middle;"> Website redesign is coming soon!</p>
 	</div>
 
 	</div>
