--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	
-     <a class="navbar-brand" href="Home.html">
+     <a class="navbar-brand" href="index">
     <img src="Images/TLogoWhite.png" width="30" height="30" class="d-inline-block align-top" alt="Home.html">
     TechySite
   </a>
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="ServerFM">Server</a>
