--- a/404.html
+++ b/404.html
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/Home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/ServerFM.html">Server</a>
+            <a class="nav-link" href="ServerFM">Server</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="/Youtubers.html">Youtube</a>
+            <a class="nav-link" href="Youtubers">Youtube</a>
           </li>
 		  <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
@@ -47,10 +47,10 @@
               <a class="dropdown-item" href="#">FPS</a>
 			  <div class="dropdown-divider"></div>
 			  <center><h>Website 1.0</h></center>
-			  <a class="dropdown-item" href="/TechySite1.0/Home.html">Home</a>
-			  <a class="dropdown-item" href="/TechySite1.0/About.html">About</a>
-			  <a class="dropdown-item" href="/TechySite1.0/Gallery.html">Gallery</a>
-			  <a class="dropdown-item" href="/TechySite1.0/Youtubers.html">Friend's Channels</a>
+			  <a class="dropdown-item" href="TechySite1.0/Home.html">Home</a>
+			  <a class="dropdown-item" href="TechySite1.0/About.html">About</a>
+			  <a class="dropdown-item" href="TechySite1.0/Gallery.html">Gallery</a>
+			  <a class="dropdown-item" href="TechySite1.0/Youtubers.html">Friend's Channels</a>
 			  
 			  
             </div>
