--- a/ServerFM.html
+++ b/ServerFM.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 	
-     <a class="navbar-brand" href="Home.html">
+     <a class="navbar-brand" href="index">
     <img src="Images/TLogoWhite.png" width="30" height="30" class="d-inline-block align-top" alt="Home.html">
     TechySite
     </a>
@@ -32,10 +32,10 @@
             <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" href="ServerFM.html">Server</a>
+            <a class="nav-link" href="ServerFM">Server</a>
           </li>
 		  <li class="nav-item">
-            <a class="nav-link" href="Youtubers.html">Youtube</a>
+            <a class="nav-link" href="Youtubers">Youtube</a>
           </li>
 		  <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
