--- a/Youtubers.html
+++ b/Youtubers.html
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="Home.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="ServerFM.html">Server</a>
+            <a class="nav-link" href="ServerFM">Server</a>
           </li>
 		  <li class="nav-item active">
-            <a class="nav-link" href="Youtubers.html">Youtube</a>
+            <a class="nav-link" href="Youtubers">Youtube</a>
           </li>
 		  <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="http://example.com" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Projects</a>
