--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     </div>
   </nav>
 
+  <!--Jumbotron-->
   <div class="jumbotron jumbotron-fluid ">
     <div class="container">
       <h1 class="display-5">Hello my name is <kbd>TechyBlock</kbd></font></h1>
@@ -61,18 +62,16 @@
     </div>
   </div>
 
-<!---Main Body  -->
-<center>
-<div class="container">
-	<div class="row">
-
+  <!---Main Body  -->
+  <center>
+  <div class="container">
+	  <div class="row">
       <div class="card border-light mb-3 animated fadeInUp" style="width: 17rem;float:left;">
-    
-          <div class="card-body">    
-            <center><h3>About</h3></center>
-          </div>
-            <img class="card-img-top" style="width:200px;height:200px" src="ico/tbLOGO.png" alt="Card image cap">
-            <h5>TechyBlock</h5>
+        <div class="card-body">    
+          <center><h3>About</h3></center>
+        </div>
+          <img class="card-img-top" style="width:200px;height:200px" src="ico/tbLOGO.png" alt="Card image cap">
+          <h5>TechyBlock</h5>
           <div class="card-body" style="margin-bottom: 0px;">
             <p class="card-text" style="margin-bottom: 0px;">Developer, Technology Enthusiast, Gamer, Memer</p>
           </div>
@@ -85,8 +84,7 @@
            </div>
         </div>
 
-  
-
+        
   <div class="card border-light mb-3 animated fadeInUp" style="width: 17rem;float:left;">
     <a href="Servers.html" class="catalog-card">
       <div class="card-body">    
