--- a/Projects.html
+++ b/Projects.html
@@ -68,7 +68,7 @@
         <div class="row">
           <div class="card animated fadeInUp" style="width: 17rem;">
             <a class="catalog-card">
-          <img class="card-img-top" src="img/Sample1.PNG" alt="Card image cap">
+          <img class="card-img-top" src="img/Sample1.png" alt="Card image cap">
           <div class="card-body">
           </div>
         </a>
@@ -76,7 +76,7 @@
 
         <div class="card animated fadeInUp" style="width: 17rem;">
           <a class="catalog-card">
-        <img class="card-img-top" src="img/Sample2.PNG" alt="Card image cap" >
+        <img class="card-img-top" src="img/Sample2.png" alt="Card image cap" >
         <div class="card-body">
         </div>
       </a>
@@ -84,7 +84,7 @@
 
       <div class="card animated fadeInUp" style="width: 17rem;">
         <a class="catalog-card">
-      <img class="card-img-top" src="img/Sample3.PNG" alt="Card image cap">
+      <img class="card-img-top" src="img/Sample3.png" alt="Card image cap">
       <div class="card-body">
       </div>
     </a>
@@ -92,7 +92,7 @@
 
     <div class="card animated fadeInUp" style="width: 17rem;">
       <a class="catalog-card">
-    <img class="card-img-top" src="img/Sample4.PNG" alt="Card image cap" >
+    <img class="card-img-top" src="img/Sample4.png" alt="Card image cap" >
     <div class="card-body">
     </div>
   </a>
@@ -110,7 +110,7 @@
 
       <div class="card animated fadeInUp" style="width: 17rem;">
           <a href="Coming Soon.html" class="catalog-card">
-        <img class="card-img-top" src="img/TB1.PNG" alt="Card image cap">
+        <img class="card-img-top" src="img/TB1.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">TechySite 1.0</h5>
         </div>
@@ -120,7 +120,7 @@
 
       <div class="card animated fadeInUp" style="width: 17rem;">
           <a href="https://x-s3rv3r.000webhostapp.com/index.html" class="catalog-card">
-          <img class="card-img-top" src="img/SX.PNG" alt="Card image cap">
+          <img class="card-img-top" src="img/SX.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Server X</h5>
         </div>
