--- a/Projects.html
+++ b/Projects.html
@@ -110,7 +110,7 @@
 
       <div class="card animated fadeInUp" style="width: 17rem;">
           <a href="Coming Soon.html" class="catalog-card">
-        <img class="card-img-top" src="img/TB1.png" alt="Card image cap">
+        <img class="card-img-top" src="img/TB1.PNG" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">TechySite 1.0</h5>
         </div>
