--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
           <a class="nav-link" href="index">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Media.html">Media</a>
+          <a class="nav-link" href="Media">Media</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Servers.html">Server</a>
+          <a class="nav-link" href="Servers">Server</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Projects.html">Projects</a>
+          <a class="nav-link" href="Projects">Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Emu.html">Emulation</a>
+          <a class="nav-link" href="Emu">Emulation</a>
         </li>
       </ul>
       <span class="nav-item">
