--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
       <div class="container">
         <div class="row">
-          <div class="animated fadeInUp"><iframe src="https://discordapp.com/widget?id=489650007570382848&theme=dark"
+          <div class="animated fadeInUp"><iframe src="https://discordapp.com/widget?id=578039372667027469&theme=light"
               width="350" height="500" allowtransparency="true" frameborder="0"></iframe></div>
           <div class="container animated fadeInUp" style="width: 45rem;">
             <div class="card">
