--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </li>
       </ul>
       <span class="nav-item">
-        <button type="link" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Feature coming soon">MD
+        <button type="link" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Feature not planned right now">MD
           Light 2.0</button>
       </span>
     </div>
@@ -78,7 +78,9 @@
               <h3>About</h3>
             </center>
           </div>
+          <center>
           <img class="card-img-top" style="width:200px;height:200px" src="ico/tbLOGO.png" alt="Card image cap">
+        </center>
           <h5>TechyBlock</h5>
           <div class="card-body" style="margin-bottom: 0px;">
             <p class="card-text" style="margin-bottom: 0px;">Developer, Technology Enthusiast, Gamer, Memer</p>
